<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/lblTitolo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titolo"
                android:background="@color/colorPrimaryDark"
                android:padding="15sp"
                android:enabled="false"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                />

            <Button
                android:id="@+id/btnSaluta"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/saluta"
                android:background="@color/colorArancio"
                android:textColor="@color/colorRosso"
                android:textSize="38dp"
                />
            <Button
                android:id="@+id/btnAltobasso"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/alto_basso"
                android:background="@color/colorArancio"
                android:textColor="@color/colorRosso"
                android:textSize="38dp"
                />
            <Button
                android:id="@+id/btnAccel"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/accelerometro"
                android:background="@color/colorArancio"
                android:textColor="@color/colorRosso"
                android:textSize="38dp"
                android:hint="@string/alto_basso"
                />
            <Button
                android:id="@+id/btnFoto"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/fotocamera"
                android:background="@color/colorArancio"
                android:textColor="@color/colorRosso"
                android:textSize="38dp"
                android:hint="@string/alto_basso"
                />
            <Button
                android:id="@+id/btnTris"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/tris"
                android:background="@color/colorNero"
                android:textColor="@color/colorVerde"
                android:textSize="38dp"
                android:hint="@string/alto_basso"
                />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>